--- a/src/main/resources/application-pdn.properties
+++ b/src/main/resources/application-pdn.properties
@@ -1,9 +1,9 @@
-server.port=80
+server.port=${PORT}
 
 # Database
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/market-db
-spring.datasource.username=transmodal
-spring.datasource.password=transmodal123$
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 
 #java -jar "-Dspring.profiles.active=pdn" plazi-market-1.0.jar
